GNOME Bugzilla – Bug 697512
avmux: Fails to register muxers with commas in the libav muxer name
Last modified: 2013-08-13 10:50:54 UTC
When starting a gstreamer app like totem I get these warnings (with backtraces prior) : Breakpoint 1, g_logv (log_domain=0x7ffff78ce26c "GLib-GObject", log_level=G_LOG_LEVEL_WARNING, format=0x7ffff78d6628 "type name `%s' contains invalid characters", args=args@entry=0x7fffef7fc488) at /build/buildd-glib2.0_2.36.0-2-amd64-6GGhvz/glib2.0-2.36.0/./glib/gmessages.c:857 857 /build/buildd-glib2.0_2.36.0-2-amd64-6GGhvz/glib2.0-2.36.0/./glib/gmessages.c: No such file or directory. (gdb) bt
+ Trace 231748
Continuing. (gst-launch-1.0:1569): GStreamer-CRITICAL **: gst_element_register: assertion `g_type_is_a (type, GST_TYPE_ELEMENT)' failed That's on Debian unstable/experimental with Gnome 3.8.
Sorry, reinstalling the packages got rid of the errors. I guess it's not related to gstreamer.
Created attachment 251207 [details] [review] Fix gst-libav issues when ffmpeg muxers have a comma in their name I encountered this today and this is actually a real problem (which seems to be triggered by building against a system libav. At least the: (gst-launch-1.0:1569): GLib-GObject-WARNING **: type name `avmux_stream_segment,ssegment' contains invalid characters Warning is a real problem. Also see: https://bugs.mageia.org/show_bug.cgi?id=10894 The attached (trivial) patch fixes this.
Ugh, I cannot re-open this, can someone else please re-open? Lionel as the reporter you should be able to re-open.
Please attach patches in git format-patch style in the future :) commit 3d628e567635de6eb8d9ca366865dcb317f53e20 Author: Hans de Goede <hdegoede@redhat.com> Date: Tue Aug 13 12:49:26 2013 +0200 avmux: Don't fail on commas in the libav muxer type names https://bugzilla.gnome.org/show_bug.cgi?id=697512