avmux: Don't fail on commas in the libav muxer type names

https://bugzilla.gnome.org/show_bug.cgi?id=697512